--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <data>
 
-</RelativeLayout>
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        tools:context=".MainActivity">
+
+        <ImageView
+            android:id="@+id/hero_image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            tools:ignore="ContentDescription"
+            tools:src="@tools:sample/avatars"/>
+
+        <EditText
+            android:id="@+id/hero_name_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/hero_image"
+            android:layout_alignTop="@+id/hero_image"
+            android:layout_marginStart="16dp"
+            android:hint="@string/super_hero_name"
+            tools:ignore="Autofill,LabelFor,TextFields"/>
+        <EditText
+            android:id="@+id/hero_alter_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/hero_image"
+            android:layout_alignBottom="@+id/hero_image"
+            android:layout_marginStart="16dp"
+            android:hint="@string/alter_ego"
+            tools:ignore="Autofill,LabelFor,TextFields"/>
+        <View
+            android:id="@+id/linea"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="16dp"
+            android:layout_below="@id/hero_image"
+            />
+
+        <TextView
+            android:id="@+id/bio_texto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:layout_below="@id/linea"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="Bio"
+            tools:ignore="HardcodedText" />
+
+        <EditText
+            android:id="@+id/bio_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           android:layout_marginTop="16dp"
+            android:layout_below="@+id/bio_texto"
+            android:hint="@string/short_bio"
+            tools:ignore="Autofill,LabelFor,TextFields"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:layout_below="@id/bio_edit"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="@string/power_string"
+            tools:ignore="HardcodedText" />
+    </RelativeLayout>
+</layout>
